--- a/premier6-product/layouts/theme.liquid
+++ b/premier6-product/layouts/theme.liquid
@@ -109,7 +109,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/js/bootstrap.min.js" integrity="sha384-VjEeINv9OSwtWFLAtmc4JCtEJXXBub00gtSnszmspDLCtC0I4z4nqz7rEFbIZLLU" crossorigin="anonymous"></script>
 
 <script src="https://cdn.jwplayer.com/libraries/V0kBeGms.js"></script>
-<script src="https://cdn.jwplayer.com/libraries/V0kBeGms.js"></script>
+<script src="https://raw.githubusercontent.com/gilelnatan/kjb-am/main/premier6-product/assets/chapters.js"></script>
 <script>
   const player = new Plyr('#player');
 </script>
